<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/views_drop_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Change Display"
        android:icon="@drawable/ic_arrow_down"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/today_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="Today's Goals" />
            <item
                android:id="@+id/tomorrow_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="Tomorrow's Goals" />
            <item
                android:id="@+id/pending_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="Pending Goals" />
            <item
                android:id="@+id/recurring_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="Recurring Goals" />
        </menu>
    </item>
</menu>