<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Goal Description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <RadioButton
            android:id="@+id/one_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="One Time" />

        <RadioButton
            android:id="@+id/daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Daily" />

        <RadioButton
            android:id="@+id/weekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Weekly" />

        <RadioButton
            android:id="@+id/monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Monthly" />

        <RadioButton
            android:id="@+id/yearly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Yearly" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>