<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/focus_mode"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/filter_menu_button"
        app:layout_constraintEnd_toStartOf="@+id/dateTextView"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:text="date_placeholder"
        android:textSize="18sp"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toStartOf="@+id/add_goal_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_goal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/button_advance_date"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/right_arrow"
        app:iconTint="#020101"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="?android:attr/textColorSecondary" />

</androidx.constraintlayout.widget.ConstraintLayout>
